[package]

name = "sigma-info"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
homepage = "https://sigmatactical.info"
description = "Markdown-fed information sharing site for Sigma Tactical Group"
publish = false

[dependencies]
askama = "0.16.0"
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["html"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
sigma-theme = { git = "https://github.com/sigmatactical-org/sigma-theme.git", default-features = false, features = ["askama", "warp"] }
sigma-pg = { git = "https://github.com/sigmatactical-org/sigma-pg.git" }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "signal", "sync"] }
warp = { version = "0.4.3", features = ["server", "test"] }

[dev-dependencies]
temp-env = "0.3.6"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
